--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background: rgb(67, 120, 211);
+    background: rgba(52,73,94 ,1);
     font-family: Arial, Helvetica, sans-serif;
 
 }
@@ -14,7 +14,7 @@ main {
     text-align: center;
 }
 .seats-center {
-    width: 60%;
+    width: 35%;
     text-align: center;
 }
 .seats-center div{
@@ -22,10 +22,7 @@ main {
     display: inline-block;
     transition: all .5s;
     color: white;
-    -webkit-transition: all .5s;
-    -moz-transition: all .5s;
-    -ms-transition: all .5s;
-    -o-transition: all .5s;
+    
 }
 
 .red {
@@ -34,7 +31,7 @@ main {
     background-size: 100%;
     */margin: .8rem .2rem;
     font-size: 2rem;
-    color: rgb(99, 139, 208);
+    color: #5a5a5a;
 
     transition: all .7s;
     cursor: pointer;
@@ -53,7 +50,8 @@ main {
     width: 30%;
     margin: 0 auto;
     padding: 2rem;
-    background: black;
+    background: white;
+    box-shadow: 0px 0px 26px 3px white;
 }
 
 .number-seats {
@@ -66,7 +64,7 @@ main {
 
 
 .red:hover .number-seats {
-    color: rgb(163, 174, 184);
+    color: rgba(236,240,241 ,1);
 }
 .red:hover {
     transform: scale(1.3);
@@ -99,7 +97,7 @@ main {
     display: inline-block;
 }
 .legend div:nth-child(2) i  {
-    color: rgb(51, 136, 51);
+    color: rgba(39,174,96 ,1);
 }
 footer {
     position: relative;
